--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <input type="text" name="result" readonly="readonly" id="result" onclick="this.select();" />
     <p>&uarr; Enter this webhook on Buy Me A Coffee.</p>
     <strong>IMPORTANT: Do not share your webhook url anywhere!</strong><br/>
-    <a href="https://youtu.be/ODtczftXi_E">Video tutorial here &rarr;</a>
+    <a href="https://youtu.be/ODtczftXi_E">Video tutorial here by Mihai Voinea</a>
 </main>
 <footer>
-    Made by <a href="https://getmakerlog.com/@voinea">Mihai Voinea</a><br/>
+    Made by <a href="https://getmakerlog.com/@fajarsiddiq">Fajar Siddiq</a><br/>
     If you found this is useful, you can buy me a coffee:<br/>
 
-    <a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/voinea">
+    <a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/fajarsiddiq">
         <img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" alt="Buy me a coffee">
         Buy me a coffee
     </a>
