--- a/index.html
+++ b/index.html
@@ -4,33 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Buy Me A Coffee for Makerlog</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:700|Cookie" rel="stylesheet">
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-<header>
-    <h1>Buy Me A Coffee for Makerlog</h1>
-</header>
-<main>
-    <label for="bmc">Enter your Buy Me A Coffee profile:</label>
+    <link rel="shortcut icon" type="image/png" href="assets/coffeebot.png"/>
+
+    <title>☕ Buy Me A Coffee for Makerlog</title>
+    <meta name="title" content="☕ Buy Me A Coffee for Makerlog - Log Your Coffees Automatically">
+        <meta name="description" content="BMC can send webhook events on your Makerlog Account Task Automatically">
+
+        <meta property="og:title" content="Buy Me A Coffee for Makerlog - Log Your Coffees Automatically">
+        <meta property="og:type" content="website">
+        <meta property="og:description" content="BMC can send webhook events on your Makerlog Account Task Automatically">
+        <meta property="og:image" content="https://raw.githubusercontent.com/fajarsiddiqfs/FajarSiddiq/master/dist/images/makersdrink.png">
+        <meta property="og:url" content="https://buymeacoffee.netlify.com/">
+      
+        <meta property="twitter:title" content="Buy Me A Coffee for Makerlog - Log Your Coffees Automatically">
+        <meta property="twitter:description" content="BMC can send webhook events on your Makerlog Account Task Automatically">
+         <meta property="twitter:image" content="https://raw.githubusercontent.com/fajarsiddiqfs/FajarSiddiq/master/dist/images/makersdrink.png">
+        <meta property="twitter:card" content="summary_large_image">
+
+
+        <link href="https://fonts.googleapis.com/css?family=Poppins:700|Cookie" rel="stylesheet">
+        <link href="style.css" rel="stylesheet" type="text/css">
+        </head>
+        <body>
+        <header>
+    
+    <h1>🤑 Buy Me A Coffee for Makerlog</h1>
+    <img src="assets/makersdrink.png" alt="Buy Me A Coffee">Buy Me A Coffee for Makerlog</a>
+    </header>
+    <main>
+    <label for="bmc">☕ Enter your Buy Me A Coffee Profile:</label>
     <input type="text" name="bmc" id="bmc">
-    <label for="makerlog">Enter your Makerlog Webhook:</label>
+    <label for="makerlog">✅ Enter your Makerlog Webhook:</label>
     <input type="text" name="makerlog" id="makerlog">
-    <label for="result">Your webhook is:</label>
+    <label for="result">🕷️ Your webhook is:</label>
     <input type="text" name="result" readonly="readonly" id="result" onclick="this.select();" />
     <p>&uarr; Enter this webhook on Buy Me A Coffee.</p>
-    <strong>IMPORTANT: Do not share your webhook url anywhere!</strong><br/>
-    <a href="https://youtu.be/ODtczftXi_E">Video tutorial here by Mihai Voinea</a>
+    <strong>*IMPORTANT: Do not share your webhook url anywhere!</strong><br/>
+    <a href="https://www.buymeacoffee.com/webhook">☕ Get Your Buy Me A Coffee Webhook here</a>
 </main>
+
+<strong>*EXAMPLE: Automatically log your tasks on your Makerlog account when someone buys you a coffee from BMC</strong><br/>
+<img src="assets/makersdrink.png" alt="Buy Me A Coffee">Buy Me A Coffee for Makerlog</a>
+
+
 <footer>
-    Made by <a href="https://getmakerlog.com/@fajarsiddiq">Fajar Siddiq</a><br/>
-    If you found this is useful, you can buy me a coffee:<br/>
+    Made by <a href="https://getmakerlog.com/@fajarsiddiq">Fajar Siddiq 💜</a><br/>
+    If you found this is useful, you can buy me a coffee ☕ <br/>
 
     <a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/fajarsiddiq">
-        <img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" alt="Buy me a coffee">
-        Buy me a coffee
-    </a>
+        <img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" alt="Buy Me A Coffee">Buy Me A Coffee</a>
 </footer>
 <script>
     const bmcInput = document.getElementById('bmc');
