--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="assets/coffeebot.png"/>
 
-    <title>☕ Buy Me A Coffee for Makerlog</title>
+    <title>Buy Me A Coffee for Makerlog</title>
     <meta name="title" content="☕ Buy Me A Coffee for Makerlog - Log Your Coffees Automatically">
         <meta name="description" content="BMC can send webhook events on your Makerlog Account Task Automatically">
 
@@ -29,7 +29,7 @@
         <header>
     
     <h1>🤑 Buy Me A Coffee for Makerlog</h1>
-    <img src="assets/makersdrink.png" alt="Buy Me A Coffee">Buy Me A Coffee for Makerlog</a>
+    <img src="assets/makersdrink.png" alt="Buy Me A Coffee"></a>
     </header>
     <main>
     <label for="bmc">☕ Enter your Buy Me A Coffee Profile:</label>
@@ -44,7 +44,7 @@
 </main>
 
 <strong>*EXAMPLE: Automatically log your tasks on your Makerlog account when someone buys you a coffee from BMC</strong><br/>
-<img src="assets/makersdrink.png" alt="Buy Me A Coffee">Buy Me A Coffee for Makerlog</a>
+<img src="assets/makerlogfajar.png" alt="Buy Me A Coffee"></a>
 
 
 <footer>
