--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <header>
     
     <h1>🤑 Buy Me A Coffee for Makerlog</h1>
-    <img src="assets/makersdrink.png" alt="Buy Me A Coffee"></a>
+    <img src="assets/makersdrink.png" alt="Buy Me A Coffee" class="responsive"></a>
     </header>
     <main>
     <label for="bmc">☕ Enter your Buy Me A Coffee Profile:</label>
@@ -51,8 +51,6 @@
     Made by <a href="https://getmakerlog.com/@fajarsiddiq">Fajar Siddiq 💜</a><br/>
     If you found this is useful, you can buy me a coffee ☕ <br/>
 
-    <a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/fajarsiddiq">
-        <img src="https://www.buymeacoffee.com/assets/img/BMC-btn-logo.svg" alt="Buy Me A Coffee">Buy Me A Coffee</a>
 </footer>
 <script>
     const bmcInput = document.getElementById('bmc');
