--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <a href="https://www.buymeacoffee.com/webhook">☕ Get Your Buy Me A Coffee Webhook here</a>
     </br>
     </br>
-    <strong>*EXAMPLE: Automatically log your tasks on your Makerlog account when someone buys you a coffee from BMC</strong><br/>
+    <strong>*EXAMPLE: Automatically log your tasks on your Makerlog account</strong><br/>
 <img src="assets/makerlogfajar.png" alt="Buy Me A Coffee"></a>
 </main>
 
