--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </br>
     </br>
     <strong>*EXAMPLE: Automatically log your tasks on your Makerlog account</strong><br/>
-<img src="assets/makerlogfajar.png" alt="Buy Me A Coffee"></a>
+<img src="assets/makerlogfajar.png" alt="Buy Me A Coffee" class="responsive"></a>
 </main>
 
 <footer>
