--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
 <footer>
     Made by <a href="https://getmakerlog.com/@fajarsiddiq">Fajar Siddiq 💜</a><br/>
-    If you found this is useful, you can buy me a coffee ☕ <br/>
+    <a href="https://buymeacoffee.com/fajarsiddiq">You can buy me a coffee ☕</a><br/>
+
 
 </footer>
 <script>
