--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         </head>
         <body>
         <header>
-        <center>
     <h1>🤑 Buy Me A Coffee for Makerlog</h1>
     <img src="assets/makersdrink.png" alt="Buy Me A Coffee" class="responsive"></a>
     </header>
@@ -39,11 +38,12 @@
     <label for="result">🕷️ Your webhook is:</label>
     <input type="text" name="result" readonly="readonly" id="result" onclick="this.select();" />
     <p>&uarr; Enter this webhook on Buy Me A Coffee.</p>
-    <strong>*IMPORTANT: Do not share your webhook url anywhere!</strong><br/>
+    <center>
+    <strong>Do not share your webhook url anywhere!</strong><br/>
     <a href="https://www.buymeacoffee.com/webhook">☕ Get Your Buy Me A Coffee Webhook here</a>
     </br>
     </br>
-    <strong>*EXAMPLE: Automatically log your tasks on your Makerlog account</strong><br/>
+    <strong>Automatically log your tasks on your Makerlog account</strong><br/>
 <img src="assets/makerlogfajar.png" alt="Buy Me A Coffee" class="responsive"></a>
 </center>
 </main>
