--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 
 <footer>
     Made by <a href="https://getmakerlog.com/@fajarsiddiq">Fajar Siddiq 💜</a><br/>
-    <a href="https://buymeacoffee.com/fajarsiddiq">You can buy me a coffee ☕</a><br/>
-
+    Open Source by <a href="https://getmakerlog.com/@voinea">Mihai Voinea 💜</a><br/>
 
 </footer>
 <script>
