--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 </main>
 
 <footer>
-    Made by <a href="https://getmakerlog.com/@fajarsiddiq">Fajar Siddiq 💜</a><br/>
-    Open Source by <a href="https://getmakerlog.com/@voinea">Mihai Voinea 💜</a><br/>
+    Made by <a href="https://getmakerlog.com/@fajarsiddiq">Fajar Siddiq 🇸🇬</a><br/>
+    Open Source by <a href="https://getmakerlog.com/@voinea">Mihai Voinea 🇷🇴</a><br/>
 
 </footer>
 <script>
