--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     <a href="https://www.buymeacoffee.com/webhook">☕ Get Your Buy Me A Coffee Webhook here</a>
     </br>
     </br>
+    <strong>Do not share your webhook url anywhere!</strong><br/>
+    <a href="https://getmakerlog.com/apps/webhooks">✅ Get Your Makerlog Webhook here</a>
+    </br>
+    </br>
     <strong>Automatically log your tasks on your Makerlog account</strong><br/>
 <img src="assets/makerlogfajar.png" alt="Buy Me A Coffee" class="responsive"></a>
 </center>
