--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <a href="https://getmakerlog.com/apps/webhooks">✅ Get Your Makerlog Webhook here</a>
     </br>
     </br>
+    <strong>Make sure you create your Project First on Makerlog #yourproject</strong><br/>
     <strong>Automatically log your tasks on your Makerlog account</strong><br/>
 <img src="assets/makerlogfajar.png" alt="Buy Me A Coffee" class="responsive"></a>
 </center>
