--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     <input type="text" name="result" readonly="readonly" id="result" onclick="this.select();" />
     <p>&uarr; Enter this webhook on Buy Me A Coffee.</p>
     <center>
-    <strong>Do not share your webhook url anywhere!</strong><br/>
+    <strong>Do not share your BMC webhook url anywhere</strong><br/>
     <a href="https://www.buymeacoffee.com/webhook">☕ Get Your Buy Me A Coffee Webhook here</a>
     </br>
     </br>
-    <strong>Do not share your webhook url anywhere!</strong><br/>
+    <strong>Do not share your Makerlog webhook url anywhere</strong><br/>
     <a href="https://getmakerlog.com/apps/webhooks">✅ Get Your Makerlog Webhook here</a>
     </br>
     </br>
