--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </main>
 
 <footer>
-    Made by <a href="https://getmakerlog.com/@fajarsiddiq">Fajar Siddiq 🇸🇬</a><br/>
+    Made by <a href="https://getmakerlog.com/products/makers-drink">Fajar Siddiq 🇸🇬</a><br/>
     Open Source by <a href="https://getmakerlog.com/@voinea">Mihai Voinea 🇷🇴</a><br/>
 
 </footer>
