--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="assets/coffeebot.png"/>
 
-    <title>Buy Me A Coffee for Makerlog</title>
-    <meta name="title" content="☕ Buy Me A Coffee for Makerlog - Log Your Coffees Automatically">
-        <meta name="description" content="BMC can send webhook events on your Makerlog Account Task Automatically">
+         <!-- Primary Meta Tags -->
+        <title>Buy Me A Coffee for Makerlog - Log Your Coffees Automatically</title>
+        <meta name="title" content="Buy Me A Coffee for Makerlog - Log Your Coffees Automatically">
+        <meta name="description" content="Send your buy me a coffee webhook events on your Makerlog account task automatically when someone tip you.">
 
-        <meta property="og:title" content="Buy Me A Coffee for Makerlog - Log Your Coffees Automatically">
+        <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
-        <meta property="og:description" content="BMC can send webhook events on your Makerlog Account Task Automatically">
-        <meta property="og:image" content="https://raw.githubusercontent.com/fajarsiddiqfs/FajarSiddiq/master/dist/images/makersdrink.png">
-        <meta property="og:url" content="https://buymeacoffee.netlify.com/">
-      
-        <meta property="twitter:title" content="Buy Me A Coffee for Makerlog - Log Your Coffees Automatically">
-        <meta property="twitter:description" content="BMC can send webhook events on your Makerlog Account Task Automatically">
-         <meta property="twitter:image" content="https://raw.githubusercontent.com/fajarsiddiqfs/FajarSiddiq/master/dist/images/makersdrink.png">
+        <meta property="og:url" content="https://buymeacoffee.netlify.app/">
+        <meta property="og:title" content="Buy Me A Coffee for Makerlog - Log Your Coffees Automatically">
+        <meta property="og:description" content="Send your buy me a coffee webhook events on your Makerlog account task automatically when someone tip you.">
+        <meta property="og:image" content="https://i.ibb.co/bXTCXMs/makersdrink.png">
+
+        <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://buymeacoffee.netlify.app/">
+        <meta property="twitter:title" content="Buy Me A Coffee for Makerlog - Log Your Coffees Automatically">
+        <meta property="twitter:description" content="Send your buy me a coffee webhook events on your Makerlog account task automatically when someone tip you.">
+        <meta property="twitter:image" content="https://i.ibb.co/bXTCXMs/makersdrink.png">
 
 
         <link href="https://fonts.googleapis.com/css?family=Poppins:700|Cookie" rel="stylesheet">
